# python-flask-app-main

./: Dockerfile  README.md  app.py  pyproject.toml  sensor_model.py
SourceCode_29_01_2024/: A0_DB_Connect_Download.py  A1_data_processing_1.py  A2_pattern_map_processing.py  A3_Final_Pat_Poly_Combine.py  B1_Well_Traj_ShapeFile.py  B2_distance_matrix.py  B3_PressData_Processing.py  B4_Calc_DrainageArea_Overlap.py  B4a_Calc_DrainageArea_Pattern_Overlap.py  B5_Inj_Prd_Corr.py  C1_WFO_Main.py  C2_WFO_result_for_patterQC.py  C3_WFO_Result_Analysis.py  C4_Pattern_Zone_Analysis.py  CodePipeLine.py  WFO_Functions.py  a.txt  userinput.py
db/: sensor_data.db
templates/: index.html  login.html
